--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
       --font-size: 18px;
       --line-height: 1.6;
     }
-    .contrast {
-      --bg: #000000;
-      --fg: #ffffff;
-      --muted: #e0e0e0;
-      --brand: #ffff00;
-      --brand-contrast: #000000;
-      --card: #111111;
-      --focus: #00ffff;
-    }
+   .contrast {
+  --bg: #e3f2fd;   
+  --fg: #0e0d0d;       /* texto blanco */
+  --muted: #0e0d0d;   /* verde claro para zonas secundarias */
+  --brand: #e3f2fd;    /* celeste (marca o acento) */
+  --brand-contrast:#e3f2fd;   
+  --card: #ffffff;     /* tarjetas blancas */
+  --focus: #e3f2fd;   /* celeste al enfocar */
+}
+
     html { scroll-behavior: smooth; }
     body {
       margin: 0;
@@ -60,12 +61,9 @@
       background: var(--brand); color: var(--brand-contrast);
     }
     .a11y-tools { display: flex; gap: 8px; align-items: center; }
-    .tool-btn {
-      background: var(--card); border: 0; padding: 10px 12px;
-      border-radius: 12px; cursor: pointer;
-    }
+   
     .hero { padding: 40px 20px; background: linear-gradient(180deg, var(--card), transparent); }
-    .hero h1 { font-size: clamp(28px, 4vw, 40px); margin: 0 0 12px; }
+    .hero h1 { font-size: clamp(24px, 6vw, 36px); margin: 0 0 12px; } 
     .hero p { margin: 0; color: var(--muted); }
     .grid { display: grid; gap: 16px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
     .card {
@@ -85,7 +83,7 @@
     .muted { color: var(--muted); }
     .video-list { display: grid; gap: 16px; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); }
     .video { background: var(--bg); border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); }
-    .video iframe { width: 100%; height: 200px; border: 0; }
+    .video iframe { width: 100%; aspect-ratio: 16/9; border: 0; }
     .video .v-body { padding: 12px; }
     .downloads { display: grid; gap: 12px; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
     .dl { display: flex; gap: 12px; align-items: start; background: var(--bg); border-radius: 12px; padding: 12px; box-shadow: var(--shadow); }
@@ -116,6 +114,61 @@
 .hero {
   text-align: center;
 }
+header {
+  background-color: white;
+  border-left: 20px solid #92dbb1;
+  border-right: 20px solid #92dbb1;
+}
+
+nav a, .navbar a {
+  color: #92dbb1;
+}
+
+nav a:hover, .navbar a:hover {
+  color: #004d25; /* tono más oscuro de verde al pasar el mouse */
+}
+
+/* === Menú verde === */
+.nav-btn {
+  border: none;
+  padding: 10px 14px;
+  border-radius: var(--radius);
+  background: #92dbb1; /* Verde suave */
+  color: rgb(14, 13, 13);        /* Texto blanco */
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+
+
+
+#contacto {
+  background-color: #92dbb1;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin-top: 24px;
+}
+
+body {
+  background-color: #92dbb1;
+  margin: 0;
+  padding: 0;
+}
+
+
+main {
+  background-color: white;
+  width: 90%; /* Se adapta al ancho del celular */
+  max-width: 400px; /* No se hace demasiado ancho en pantallas grandes */
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+
 
 
   </style>
@@ -137,7 +190,7 @@
       <div class="a11y-tools">
         <button class="tool-btn" id="dec-font" title="Letra -">A−</button>
         <button class="tool-btn" id="inc-font" title="Letra +">A＋</button>
-        <button class="tool-btn" id="contrast" aria-pressed="false" title="Alto contraste">◐</button>
+        
       </div>
     </div>
   </header>
