--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ main {
 
   <!-- Imagen principal -->
 <div style="margin:24px 0">
-  <img src="img/1.jpg"
+  <img src="1.jpg"
        alt="Adultos mayores usando tablet y celular"
        style="width:100%; 
               border-radius:26px; 
